# ROS1_Project

./: README.md  aruco_docking.py  calibrate_from_captures.py  docking_node.py  image_subscribe2.py  image_subscriber.py  lidar_delete90.py
0611/: Aruco  extract_image_and_pcd_pairs.py  find_pixel
0612/: 3lidarpoint.py  Lidarpoint_Projection.py  Lidarpoint_Projection2.py  extrinsic_solvepnp.py  lidarpoint_proj.py
0616/: Cam_Lidar_Calibration.py  aruco_detector.py  docking_controller.py
0619/: CMakeLists.txt  camera_calib.yaml  docking.launch  docking2.launch  docking_node.py  maze_escape.launch  maze_escape_node.launch  maze_escape_node.py  package.xml
0620/: 2nd_docking.py  complementary_docking.py  docking.py  docking_odom.py  naye_docking.py  naye_docking2.py  new_docking.py
0620/parameter/: base_local_planner_params.yaml  costmap_common_params_burger.yaml  dwa_local_planner_params_burger.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml
week2/: code.txt
week7/: HW01.py  camera_calib.launch  camera_calibrate.py  camera_capture.py  code  pixel_cal.py
week7/full_code/: CMakeLists.txt  flow.txt  full_process.launch  image_saver.launch  image_view.launch  make_list.py  package.xml  parameters.py  save_image.sh  solve_pnp.launch  solve_pnp.py  turtlebot3_camera.launch
