<?xml version="1.0"?>
<package format="2">
  <name>docking_project</name>
  <version>0.0.0</version>
  <description>The docking_project package</description>

  <maintainer email="your@email.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>cv_bridge</depend>

  <export></export>
</package>

